--- a/html/index.html
+++ b/html/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html class="investIncreaseInterest-model">
-
+<html class="main-html">
 <head>
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="format-detection" content="telephone=no" />
-	<title>新用户专享18%收益</title>
+	<title>风驰电掣世界杯</title>
 	@@include('meta.html')
 	<link rel="stylesheet" href="<%=cssUrl%>/main.css" />
 </head>
-
-<body>
+<body class="main-body">
 	<!--内容区域-->
 	<div id="app" v-cloak>
 
-     测试页面
+      <div class="list-btn">
+		  <div class="beginBtn"></div>
+		  <div class="rewardBtn"></div>
+		  <div class="ruleBtn"></div>
+	  </div>
 
 	</div>
 	@@include('vue-footer.html')
