--- a/web/html/pages/cupdraw/reward.html
+++ b/web/html/pages/cupdraw/reward.html
@@ -92,21 +92,27 @@ var shareBasePath='undefined';
 
 	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-b61000b8cf.css" />
 </head>
-<body class="main-body">
-	<!--内容区域-->
-	<div id="app" v-cloak>
-
-      <div class="list-btn">
-		  <div class="beginBtn"></div>
-		  <div class="rewardBtn"></div>
-		  <div class="ruleBtn"></div>
-	  </div>
-
-	</div>
+<body class="reward-body">
+    <!--内容区域-->
+    <div id="app">
+            <div class="goback"></div>
+            <div class="reward-wrap">
+                <div class="tip"></div>
+                <div class="title">中奖名单与微信公众号<br>
+                        推送中奖信息同步</div>
+              <div class="content">
+                      <div class="item">
+                          <div class="name">小组赛抽奖获奖名单</div>
+                          <ul>
+                              <li>1.18513917909</li>
+                          </ul>
+                      </div>
+              </div>
+            </div>
+    </div>   
 	 <!--底部引用的js资源-->
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/lib/vue/vue-66ba6d0e76.js"></script>
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-89a8ab2ab0.js"></script>
-	<script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/index-c983283fd2.main.js"></script>
 </body>
 
 </html>
