--- a/web/html/pages/cupdraw/rules.html
+++ b/web/html/pages/cupdraw/rules.html
@@ -92,21 +92,19 @@ var shareBasePath='undefined';
 
 	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-b61000b8cf.css" />
 </head>
-<body class="main-body">
+<body class="rules-body">
 	<!--内容区域-->
-	<div id="app" v-cloak>
-
-      <div class="list-btn">
-		  <div class="beginBtn"></div>
-		  <div class="rewardBtn"></div>
-		  <div class="ruleBtn"></div>
-	  </div>
-
-	</div>
+     <div class="goback"></div>
+      <div class="rules-wrap">
+          <div class="title">活动规则</div>
+        <div class="content">
+                活动规则：<br>
+                根据世界杯比赛时间选择晋级球队参与游戏，如小组赛晋级球队，从32支球队中选出16球队，按照小组赛出线结果猜中出现球队的用户，获得参与抽奖资格，半决赛与决赛规则变为猜比分获得抽奖资格，（半决赛与决赛猜比分竞猜结果不包含加时赛与点球结果）。国网河北电力微信公众号公布，用户也可在微信H5中奖名单中查看中奖结果。
+        </div>
+      </div>
 	 <!--底部引用的js资源-->
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/lib/vue/vue-66ba6d0e76.js"></script>
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-89a8ab2ab0.js"></script>
-	<script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/index-c983283fd2.main.js"></script>
 </body>
 
 </html>
