--- a/web/html/pages/cupdraw/game4.html
+++ b/web/html/pages/cupdraw/game4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="main-html">
+<html class="main-html  game-html">
 <head>
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="format-detection" content="telephone=no" />
@@ -92,28 +92,44 @@ var shareBasePath='undefined';
 
 	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-ffffeed6e4.css" />
 </head>
-<body class="reward-body">
+<body class="game8-body">
     <!--内容区域-->
     <div id="app" v-cloak>
-            <div class="goback" @click="goback" ></div>
-            <div class="reward-wrap">
-                <div class="tip"></div>
-                <div class="title">中奖名单与微信公众号<br>
-                        推送中奖信息同步</div>
-              <div class="content">
-                      <div class="item">
-                          <div class="name">小组赛抽奖获奖名单</div>
-                          <ul>
-                              <li>1.18513917909</li>
-                          </ul>
-                      </div>
-              </div>
+           <div class="title title2">1/4决赛猜中三支出线球队，获得抽奖资</div>
+
+               <div class="item"  flex="main:justify">
+                   <div class="name active">
+                       俄罗斯
+                   </div>
+                   <div class="info">
+                       <p>J 喀山</p>
+                       <p><span>7月2日</span> 3:00</p>
+                   </div>
+                   <div class="name">
+                     克罗地亚
+                   </div>
+               </div>
+               <div class="item"  flex="main:justify">
+                <div class="name">
+                    俄罗斯
+                </div>
+                <div class="info">
+                    <p>J 喀山</p>
+                    <p><span>7月2日</span> 3:00</p>
+                </div>
+                <div class="name">
+                  克罗地亚
+                </div>
             </div>
+          <div class="btn-wrap">
+            <div class="submit-btn"></div>
+          </div>
+
     </div>   
      <!--底部引用的js资源-->
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/lib/vue/vue-66ba6d0e76.js"></script>
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-89a8ab2ab0.js"></script>
-    <script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/reward-c65078fa38.main.js"></script>
+    <script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/game16-509edb67f6.main.js"></script>
 </body>
 
 </html>
