--- a/html/index.html
+++ b/html/index.html
@@ -12,9 +12,9 @@
 	<div id="app" v-cloak>
 
       <div class="list-btn">
-		  <div class="beginBtn"></div>
-		  <div class="rewardBtn"></div>
-		  <div class="ruleBtn"></div>
+		  <div class="beginBtn" @click="showlist"></div>
+		  <div class="rewardBtn" @click="toreward"></div>
+		  <div class="ruleBtn" @click="torules"></div>
 	  </div>
 
 	</div>
