--- a/web/html/pages/cupdraw/game1.html
+++ b/web/html/pages/cupdraw/game1.html
@@ -92,39 +92,37 @@ var shareBasePath='undefined';
 
 	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-e1c914cf52.css" />
 </head>
-<body class="game8-body">
+<body class="game2-body">
     <!--内容区域-->
     <div id="app" v-cloak>
-           <div class="title title2">1/4决赛猜中三支出线球队，获得抽奖资</div>
+           <div class="title3"><span>决赛</span></div>
+           <div class="des">
+               <p>决赛猜中比赛比分，获得抽奖资格</p>
+               <p>(比分竞猜结果不包含加时赛与点球结果)</p>
+           </div>
 
-               <div class="item"  flex="main:justify">
-                   <div class="name active">
-                       俄罗斯
-                   </div>
-                   <div class="info">
-                       <p>J 喀山</p>
-                       <p><span>7月2日</span> 3:00</p>
-                   </div>
-                   <div class="name">
-                     克罗地亚
-                   </div>
-               </div>
-               <div class="item"  flex="main:justify">
-                <div class="name">
-                    俄罗斯
+           <div class="line">
+              <div class="county-item" flex="main:justify">
+                <div>
+                    <img src="http://localhost:8080/statics/images/county-img1.png" alt="">
                 </div>
-                <div class="info">
-                    <p>J 喀山</p>
-                    <p><span>7月2日</span> 3:00</p>
+                <div class="vs"></div>
+                <div>
+                    <img src="http://localhost:8080/statics/images/county-img1.png" alt="">
                 </div>
-                <div class="name">
-                  克罗地亚
+              </div>
+              <div class="input-item" flex="main:justify">
+                <div>
+                    <input type="tel"  maxlength="2" >
                 </div>
-            </div>
+                <div>
+                    <input type="tel"  maxlength="2" >
+                </div>
+              </div>
+           </div>            
           <div class="btn-wrap">
             <div class="submit-btn"></div>
           </div>
-
     </div>   
      <!--底部引用的js资源-->
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/lib/vue/vue-66ba6d0e76.js"></script>
