--- a/web/html/pages/cupdraw/success.html
+++ b/web/html/pages/cupdraw/success.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="main-html  game-html">
+<html class="main-html">
 <head>
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="format-detection" content="telephone=no" />
@@ -92,44 +92,22 @@ var shareBasePath='undefined';
 
 	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-e1c914cf52.css" />
 </head>
-<body class="game8-body">
-    <!--内容区域-->
-    <div id="app" v-cloak>
-           <div class="title title2">1/4决赛猜中三支出线球队，获得抽奖资</div>
-
-               <div class="item"  flex="main:justify">
-                   <div class="name active">
-                       俄罗斯
-                   </div>
-                   <div class="info">
-                       <p>J 喀山</p>
-                       <p><span>7月2日</span> 3:00</p>
-                   </div>
-                   <div class="name">
-                     克罗地亚
-                   </div>
-               </div>
-               <div class="item"  flex="main:justify">
-                <div class="name">
-                    俄罗斯
-                </div>
-                <div class="info">
-                    <p>J 喀山</p>
-                    <p><span>7月2日</span> 3:00</p>
-                </div>
-                <div class="name">
-                  克罗地亚
-                </div>
-            </div>
-          <div class="btn-wrap">
-            <div class="submit-btn"></div>
-          </div>
-
-    </div>   
-     <!--底部引用的js资源-->
+<body class="success-body">
+	<!--内容区域-->
+     <div class="goback"></div>
+      <div class="success-wrap">
+          <div class="title">竞猜成功</div>
+         <div class="content">
+            恭喜你竞猜成功，小组赛全部结束，中奖名单与微信公众号推送中奖信息同步。       
+        </div>
+        <div class="btn">
+          <div class="share-btn"></div>
+          <div class="floww-btn"></div>
+        </div>
+      </div>
+	 <!--底部引用的js资源-->
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/lib/vue/vue-66ba6d0e76.js"></script>
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-d1da4726e2.js"></script>
-    <script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/game16-509edb67f6.main.js"></script>
 </body>
 
 </html>
