--- a/web/html/index.html
+++ b/web/html/index.html
@@ -6,7 +6,7 @@
 	<title>风驰电掣世界杯</title>
 	<script>
 var basePath = 'http://localhost:8080';
-var htmlbasePath='http://localhost:8080/web/html';
+var htmlbasePath='http://localhost:8080/html';
 var imgUrl = 'http://localhost:8080/statics/images';
 var imgUrl2='http://localhost:8080/statics/images'; // 做黄金红包 html生成图片 图片不能跨域
 var shareBasePath='undefined';
@@ -90,23 +90,23 @@ var shareBasePath='undefined';
 </script>
 
 
-	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-ffffeed6e4.css" />
+	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-e1c914cf52.css" />
 </head>
 <body class="main-body">
 	<!--内容区域-->
 	<div id="app" v-cloak>
 
       <div class="list-btn">
-		  <div class="beginBtn"></div>
-		  <div class="rewardBtn"></div>
-		  <div class="ruleBtn"></div>
+		  <div class="beginBtn" @click="showlist"></div>
+		  <div class="rewardBtn" @click="toreward"></div>
+		  <div class="ruleBtn" @click="torules"></div>
 	  </div>
 
 	</div>
 	 <!--底部引用的js资源-->
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/lib/vue/vue-66ba6d0e76.js"></script>
- <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-89a8ab2ab0.js"></script>
-	<script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/index-c983283fd2.main.js"></script>
+ <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-d1da4726e2.js"></script>
+	<script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/index-700c9ff0ba.main.js"></script>
 </body>
 
 </html>
