--- a/web/html/pages/cupdraw/reward.html
+++ b/web/html/pages/cupdraw/reward.html
@@ -6,7 +6,7 @@
 	<title>风驰电掣世界杯</title>
 	<script>
 var basePath = 'http://localhost:8080';
-var htmlbasePath='http://localhost:8080/web/html';
+var htmlbasePath='http://localhost:8080/html';
 var imgUrl = 'http://localhost:8080/statics/images';
 var imgUrl2='http://localhost:8080/statics/images'; // 做黄金红包 html生成图片 图片不能跨域
 var shareBasePath='undefined';
@@ -90,7 +90,7 @@ var shareBasePath='undefined';
 </script>
 
 
-	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-ffffeed6e4.css" />
+	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-e1c914cf52.css" />
 </head>
 <body class="reward-body">
     <!--内容区域-->
@@ -112,7 +112,7 @@ var shareBasePath='undefined';
     </div>   
      <!--底部引用的js资源-->
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/lib/vue/vue-66ba6d0e76.js"></script>
- <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-89a8ab2ab0.js"></script>
+ <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-d1da4726e2.js"></script>
     <script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/reward-c65078fa38.main.js"></script>
 </body>
 
