--- a/html/shared/meta.html
+++ b/html/shared/meta.html
@@ -2,7 +2,7 @@
 var basePath = '<%=basePath%>';
 var htmlbasePath='<%=htmlbasePath%>';
 var imgUrl = '<%=imgUrl%>';
-var imgUrl2='<%=imgUrl2%>'; // 做黄金红包 html生成图片 图片不能跨域
+var proxypath='<%=proxypath%>'; // 做黄金红包 html生成图片 图片不能跨域
 var shareBasePath='<%=shareBasePath%>';
 !function(N, M) {
     function L() {
