--- a/web/html/pages/cupdraw/game4.html
+++ b/web/html/pages/cupdraw/game4.html
@@ -8,7 +8,7 @@
 var basePath = 'http://localhost:8080';
 var htmlbasePath='http://localhost:8080/html';
 var imgUrl = 'http://localhost:8080/statics/images';
-var imgUrl2='http://localhost:8080/statics/images'; // 做黄金红包 html生成图片 图片不能跨域
+var proxypath='http://localhost:8002'; // 做黄金红包 html生成图片 图片不能跨域
 var shareBasePath='undefined';
 !function(N, M) {
     function L() {
@@ -90,7 +90,7 @@ var shareBasePath='undefined';
 </script>
 
 
-	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-e1c914cf52.css" />
+	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-33434fcbb6.css" />
 </head>
 <body class="game8-body">
     <!--内容区域-->
@@ -128,7 +128,7 @@ var shareBasePath='undefined';
     </div>   
      <!--底部引用的js资源-->
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/lib/vue/vue-66ba6d0e76.js"></script>
- <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-184e240623.js"></script>
+ <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-52dcb07444.js"></script>
     <script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/game16-509edb67f6.main.js"></script>
 </body>
 
