--- a/html/pages/cupdraw/login.html
+++ b/html/pages/cupdraw/login.html
@@ -17,21 +17,21 @@
             <div class="form">
                 <div class="input">
                     <span>手机号</span>
-                    <input class="input1" v-model="telephone" type="tel">
+                    <input class="input1" v-model="telephone" maxlength="11" type="tel">
                 </div>
                 <div class="input">
                     <span>密码</span>
-                    <input class="input1" v-model="password"  type="tel">
+                    <input class="input1" v-model="password" maxlength="10"  type="password">
                 </div>
                 <div class="input">
                     <span>验证码</span>
                     <input class="input2" v-model="yzm" maxlength="4" type="tel">
-                    <img class="yzmimg" :src="yzmimg" alt="">
+                    <img class="yzmimg" :src="yzmimg" @click="changeYzm" alt="">
                 </div>
                 <div class="tip">还未注册,<span @click="changestatus(2)">请注册</span></div>
             </div>
             <div class="btn">
-                <div class="login-btn">登录</div>
+                <div class="login-btn" @click="login" >登录</div>
             </div>
         </div>
         <div class="login-wrap" v-show="status==2">
@@ -39,25 +39,25 @@
                 <div class="form">
                     <div class="input">
                         <span>手机号</span>
-                        <input class="input1" v-model="telephone" type="tel">
+                        <input class="input1" maxlength="11" v-model="rtelephone" type="tel">
                     </div>
                     <div class="input">
                         <span>密码</span>
-                        <input class="input1" v-model="password" type="tel">
+                        <input class="input1" maxlength="10" v-model="rpassword" type="password">
                     </div>
                     <div class="input">
                             <span>再次密码</span>
-                            <input class="input1" v-model="againpassword" type="tel">
+                            <input class="input1" maxlength="10" v-model="ragainpassword" type="password">
                         </div>
                     <div class="input">
                         <span>验证码</span>
-                        <input class="input2" maxlength="4" type="tel">
-                        <img class="yzmimg" src="" alt="">
+                        <input class="input2" v-model="ryzm" maxlength="4" type="tel">
+                        <img class="yzmimg" :src="yzmimg" @click="changeYzm" alt="">
                     </div>
                     <div class="tip">已注册,<span @click="changestatus(1)">去登录</span></div>
                 </div>
                 <div class="btn">
-                    <div class="login-btn">注册</div>
+                    <div class="login-btn" @click="register">注册</div>
                 </div>
             </div>
 
