--- a/web/html/pages/cupdraw/rules.html
+++ b/web/html/pages/cupdraw/rules.html
@@ -8,7 +8,7 @@
 var basePath = 'http://localhost:8080';
 var htmlbasePath='http://localhost:8080/html';
 var imgUrl = 'http://localhost:8080/statics/images';
-var imgUrl2='http://localhost:8080/statics/images'; // 做黄金红包 html生成图片 图片不能跨域
+var proxypath='http://localhost:8002'; // 做黄金红包 html生成图片 图片不能跨域
 var shareBasePath='undefined';
 !function(N, M) {
     function L() {
@@ -90,7 +90,7 @@ var shareBasePath='undefined';
 </script>
 
 
-	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-e1c914cf52.css" />
+	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-33434fcbb6.css" />
 </head>
 <body class="rules-body">
 	<!--内容区域-->
@@ -102,9 +102,14 @@ var shareBasePath='undefined';
                 根据世界杯比赛时间选择晋级球队参与游戏，如小组赛晋级球队，从32支球队中选出16球队，按照小组赛出线结果猜中出现球队的用户，获得参与抽奖资格，半决赛与决赛规则变为猜比分获得抽奖资格，（半决赛与决赛猜比分竞猜结果不包含加时赛与点球结果）。国网河北电力微信公众号公布，用户也可在微信H5中奖名单中查看中奖结果。
         </div>
       </div>
-	 <!--底部引用的js资源-->
+   <!--底部引用的js资源-->
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/lib/vue/vue-66ba6d0e76.js"></script>
- <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-184e240623.js"></script>
+ <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-52dcb07444.js"></script>
+  <script>
+    $(".goback").on("click",function(){
+      history.go(-1);
+    })
+  </script>
 </body>
 
 </html>
