--- a/html/pages/cupdraw/game8.html
+++ b/html/pages/cupdraw/game8.html
@@ -13,16 +13,16 @@
            <div class="title">猜中六支出线球队，获得抽奖资格</div>
 
            <article>
-               <div class="item"  flex="main:justify">
-                   <div class="name active">
-                       俄罗斯
+               <div class="item"  flex="main:justify"  v-for="(item,index) in list" :key="item.id"  >
+                   <div class="name" :class="{active:teamstatus[index].teamId==item.teamA}" @click="tap(index,item.teamA)" >
+                       {{item.teamAName}}
                    </div>
                    <div class="info">
-                       <p>J 喀山</p>
-                       <p><span>7月2日</span> 3:00</p>
+                       <p>{{item.matchCode.toUpperCase()}} {{item.matchAdress}}</p>
+                       <p><span>{{item.data}}</span> {{item.hour}}</p>
                    </div>
-                   <div class="name">
-                     克罗地亚
+                   <div class="name" :class="{active:teamstatus[index].teamId==item.teamB}" @click="tap(index,item.teamB)" >
+                    {{item.teamBName}}
                    </div>
                </div>
                <div class="item"  flex="main:justify">
@@ -44,7 +44,7 @@
 
     </div>   
     @@include('vue-footer.html')
-    <script type="text/javascript" src="<%=jsUrl%>/page/cupDraw/game16.main.js"></script>
+    <script type="text/javascript" src="<%=jsUrl%>/page/cupDraw/game8.main.js"></script>
 </body>
 
 </html>
