--- a/web/html/pages/cupdraw/selectlist.html
+++ b/web/html/pages/cupdraw/selectlist.html
@@ -90,25 +90,25 @@ var shareBasePath='undefined';
 </script>
 
 
-	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-33434fcbb6.css" />
+	<link rel="stylesheet" href="http://localhost:8080/statics/styles/main-511a7172a0.css" />
 </head>
 <body class="selectlist-body">
     <!--内容区域-->
     <div id="app" v-cloak>
             <div class="list-wrap">
                <ul>
-                   <li class="active">小组赛</li>
-                   <li>1/8决赛</li>
-                   <li>1/4决赛</li>
-                   <li>半决赛</li>
-                   <li>决赛</li>
+                   <li :class="{active:code==1}" @click="linkdetail(1)" >小组赛</li>
+                   <li :class="{active:code==2}" @click="linkdetail(2)">1/8决赛</li>
+                   <li :class="{active:code==3}" @click="linkdetail(3)">1/4决赛</li>
+                   <li :class="{active:code==4}" @click="linkdetail(4)">半决赛</li>
+                   <li :class="{active:code==5}" @click="linkdetail(5)">决赛</li>
                </ul>
             </div>
     </div>   
      <!--底部引用的js资源-->
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/lib/vue/vue-66ba6d0e76.js"></script>
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-52dcb07444.js"></script>
-    <script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/selectlist-a1c64b979f.main.js"></script>
+    <script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/selectlist-cece5fd6c5.main.js"></script>
 </body>
 
 </html>
