--- a/html/pages/cupdraw/reward.html
+++ b/html/pages/cupdraw/reward.html
@@ -16,10 +16,11 @@
                 <div class="title">中奖名单与微信公众号<br>
                         推送中奖信息同步</div>
               <div class="content">
-                      <div class="item">
-                          <div class="name">小组赛抽奖获奖名单</div>
+                <div class="nodata" style="text-align:center;" v-if="list.length==0">还未有中奖名单</div>
+                      <div class="item" v-for="item in list">
+                          <div class="name">{{item.name}}</div>
                           <ul>
-                              <li>1.18513917909</li>
+                              <li v-for="(item1,index) in item.value">{{index+1}}.{{item1.phone}}</li>
                           </ul>
                       </div>
               </div>
